force-app/main/default/objects/SIOC__Account_Verification_Settings__c/SIOC__Account_Verification_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Account Verification Settings contains custom settings that help control the information for the Instant Account Verification vendor.</description>
    <label>Account Verification Settings</label>
</CustomObject>