force-app/main/default/objects/SIOC__Account_Verification_Settings__c/fields/SIOC__LoggingLevels__c.field-meta.xml
<CustomField>
    <fullName>SIOC__LoggingLevels__c</fullName>
    <description>Administrators populate this optional text field to determine the level of detail the transaction log captures.</description>
    <inlineHelpText>Enter NONE if you are configuring a production org. For a test org, enter FINEST to capture all available logs, or enter ERROR to capture error logs only.</inlineHelpText>
    <label>Logging Levels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>