force-app/main/default/objects/SIOC__Account_Verification_Settings__c/fields/SIOC__LoggingProvider__c.field-meta.xml
<CustomField>
    <fullName>SIOC__LoggingProvider__c</fullName>
    <description>Administrators populate this required text field with the Apex Class name of the logging provider.</description>
    <inlineHelpText>Enter the Apex Class name of the logging provider.</inlineHelpText>
    <label>Logging Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>