force-app/main/default/objects/SIOC__Account_Verification_Settings__c/fields/SIOC__VendorProvider__c.field-meta.xml
<CustomField>
    <fullName>SIOC__VendorProvider__c</fullName>
    <description>Administrators populate this required text field with the Apex Class name of the Instant Account Verification vendor.</description>
    <inlineHelpText>Enter the Apex Class name of the Instant Account Verification vendor.</inlineHelpText>
    <label>Vendor Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>